[package]
name = "i11n-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "i11n_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = "0.30.0"
solana-program = "=1.18.12"
anchor-i11n = { git = "https://github.com/deanmlittle/anchor-i11n.git" }
